[package]
name = "turm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nix = { version = "0.29.0", features = ["process", "term", "fs", "ioctl"] }
eframe = "0.30.0"
egui = "0.30.0"
polling = "3.7.4"
libc = "0.2.169"
font-kit = "0.14.2"
