[package]
name = "turm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nix = { version = "0.27.1", features = ["process", "term", "fs", "ioctl"] }
eframe = "0.30.0"
egui = "0.30.0"
polling = "3.6.0"
libc = "0.2.153"
font-kit = "0.13.0"
gtk4 = "0.7.2"
glib = "0.18.2"
pango = "0.18.0"
pangocairo = "0.18.0"
